# TeleMoneyChecker

./: .env.backend.example  .env.bot.example  .env.example  .gitignore  Dockerfile.backend  Dockerfile.bot  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: d7932a85742e_create_transactions_table.py
app/: pydantic_validator.py
app/api/: main.py
app/bot/: bot_constants.py  init_bot.py  init_logger.py  init_states.py  money_bot.py  report_utils.py
app/bot/handlers/: add_transaction_handler.py  delete_transaction_handler.py  edit_transaction_handler.py  get_report_handler.py
app/core/: db.py
app/models/: Transaction.py
app/utils/: currency.py
