[tool.poetry]
name = "telemoneychecker"
version = "0.1.0"
description = ""
authors = ["Nik-BZ-22 <bakhamyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic = "^2.10.0"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
aiogram = "^3.19.0"
beautifulsoup4 = "^4.13.3"
openpyxl = "^3.1.5"
httpx = "^0.28.1"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
lxml = "^5.3.1"
pandas = "^2.2.3"
python-dotenv = "^1.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
